# skarticle

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: authentication.rs  create_article.rs  create_user.rs  error_response.rs  get_article.rs  get_user.rs  handle_files.rs  mod.rs  remove_article.rs  remove_user.rs  run_query.rs  update_article.rs  update_user.rs
backend/src/state/: struct.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/commands/: article.rs  mod.rs  user.rs
common/src/settings/: methods.rs  mod.rs  server.rs  smtp.rs  struct.rs  tls.rs
database/entity/: Cargo.toml
database/entity/src/: articles_table.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  users_table.rs
database/migration/: Cargo.toml
database/migration/src/: article_type.rs  articles_table.rs  lib.rs  user_status.rs  users_table.rs
passgen/: Cargo.toml
passgen/src/: main.rs
