[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3.0", features = ["openssl"] }
openssl = { version = "0.10.45", features = ["v111"] }

migration = { path = "../database/migration" }
entity = { path = "../database/entity" }
common = { path = "../common" }
actix-files = "0.6.2"
sha2 = "0.10.6"
jwt = { version = "0.16.0", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
serde_json = "1.0.93"
env_logger = "0.10.0"
uuid = { version = "1.3.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
hmac = "0.12.1"
